src/test/deca/context/valid/113_classe1Method1ParamClass.deca
// Description:
//    Programme minimaliste: une classe pas très utile, dont le paramètre est de type A.
//
// Historique:
//    cree le 01/01/2022

class A {
}
class B {
	void f(A a) {
		println("test_pour_A");
	}
}
