src/test/deca/context/invalid/34_MultiDefMethod.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: can't defined field identifier several times in a class
// 
// Historique:
//    cree le 01/01/2022

class A {
	void f() {}
	// Doit etre refuse.
	void f() {}
}
